# DigitalTwin

./: README.md  lab1.docx  lab2.docx  main.py  package.xml  readme.md  setup.cfg  setup.py
lab_digital_twin/: __init__.py
launch/: simulation.launch.py
models/: Untitled.mtl  newv.py
models/lab_interior/: model.config  model.sdf
models/lab_interior/meshes/: README.md
paperwork/: 1.docx  2.docx  3.docx
project/: Untitled2.mtl
scripts/: brain_node.py
worlds/: lab_scene.world
