<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab_digital_twin</name>
  <version>0.1.0</version>
  <description>Цифровой двойник лаборатории робототехники (ROS2 Humble + Gazebo)</description>

  <maintainer email="robot@lab.local">Lab Digital Twin Team</maintainer>
  <license>MIT</license>

  <!-- Сборка -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime зависимости -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>launch_ros</depend>

  <!-- Тесты -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
